--- a/probabilidade.html
+++ b/probabilidade.html
@@ -18,7 +18,7 @@
             <span id="iconem"></span>
         </button>
         <ul id="menu">
-            <li><a href="index.html"> página inicial </a></li>
+            <li><a href="index.html"> página inicial d</a></li>
             <li><a href="1tri.html"> página trimestre </a></li> 
             <li><a href="poligonos.html"> Polígonos </a></li>  
             <li><a href="triangulos.html"> Triângulos </a></li> 
@@ -140,6 +140,7 @@
                 
                    </p></div>
                 </p>
+                <iframe width="40%" height="300px" class="center" src="https://www.youtube.com/embed/FyzKaLHW4RA" title="Como Aprender Probabilidade em Apenas 3 Passos." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             
             </p>
             </p>
