--- a/1tri.html
+++ b/1tri.html
@@ -19,6 +19,7 @@
         </button>
         <ul id="menu">
             <li><a href="index.html"> página inicial </a></li> 
+            <li><a class="selected"> 1 trimestre  </a></li> 
             <li><a href="2tri.html"> 2 trimestre </a></li> 
             <li><a href="3tri.html"> 3 trimestre </a></li> 
 
@@ -39,8 +40,7 @@
             pois é mais questão do primeiro do ensino médio mesmo. espero que goste desa parte do portfólio, e fique a vontade aqui.
         </p>
     </div>
-
-
+    
     <div id="container_page">
         <footer id="rodape">
             <img src="assets/img/ifrs.jpg" height="100px" class="ifrs">
@@ -49,6 +49,7 @@
             <p>telefone : 54 - 99996 5656 </p>
           </footer>
         </div>
-        <script src="assets/java/main.js"></script>
+    
+    <script src="assets/java/main.js"></script>
 </body>
 </html>
