--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <span id="iconem"></span>
         </button>
         <ul id="menu">
+            <li><a class="selected"> Página inicial  </a></li> 
             <li><a href="1tri.html"> 1 trimestre </a></li> 
             <li><a href="2tri.html"> 2 trimestre </a></li> 
             <li><a href="3tri.html"> 3 trimestre </a></li> 
