--- a/probabilidade.html
+++ b/probabilidade.html
@@ -18,7 +18,7 @@
             <span id="iconem"></span>
         </button>
         <ul id="menu">
-            <li><a href="index.html"> página inicial d</a></li>
+            <li><a href="index.html"> página inicial </a></li>
             <li><a href="1tri.html"> página trimestre </a></li> 
             <li><a href="poligonos.html"> Polígonos </a></li>  
             <li><a href="triangulos.html"> Triângulos </a></li> 
