--- a/2tri.html
+++ b/2tri.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página principal portfólio</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main2tri.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="preload" href="assets/java/main.js" as="script">
 </head>
@@ -18,9 +18,10 @@
             <span id="iconem"></span>
         </button>
         <ul id="menu">
-            <li><a href="1tri.html">| 1 trimestre | </a></li> 
-            <li><a href="index.html">| página inicial | </a></li> 
-            <li><a href="3tri.html">| 3 trimestre |</a></li> 
+            <li><a href="index.html"> página inicial </a></li> 
+            <li><a href="1tri.html"> 1 trimestre </a></li> 
+            <li><a class="selected"> 2 trimestre </a></li> 
+            <li><a href="3tri.html"> 3 trimestre </a></li> 
 
         </ul>
      </nav>
@@ -29,10 +30,22 @@
     <div class="center">
         <br>
         <br>
-        <hr>
-        <h1> EM CONSTRUÇÃO </h1>
-        <hr>
+        <div class="center">
+            <br>
+            <a href="2circunferencias.html"> <button>Circunferências </button></a> <br><br>
+            <a href="2areas.html"> <button>Áreas </button></a></button> <br><br>
+            <a href="2poligonos.html"> <button>Polígonos </button></a></button> <br><br>
+            <a href="2solidosarquimedianos.html"> <button>Sólidos de Arquimedes </button></a></button> <br><br>
+            <br>
+            <p>
+
+
+
+            </p>
+        </div>
         <br>
+
+
         <br>
 
         <a href="index.html"><button>Voltar</button> </a> <br><br>
