--- a/2circunferencias.html
+++ b/2circunferencias.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,71 +10,88 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="preload" href="assets/java/main.js" as="script">
 </head>
+
 <body>
 
     <header id="header">
         <h1 id="logo"> Ultimato abner 2023</h1>
-     <nav id="nav">
-        <button id="mobile">Menu
-            <span id="iconem"></span>
-        </button>
-        <ul id="menu">
-            <li><a href="2tri.html"> 2 trimestre  </a></li> 
-            <li><a class="selected"> Circunferências </a></li> 
-            <li><a href="2areas.html"> Áreas </a></li> 
-            <li><a href="2poligonos.html"> Polígonos  </a></li> 
-            <li><a href="2solidosarquimedianos.html"> Sólidos de Arquimedes  </a></li> 
+        <nav id="nav">
+            <button id="mobile">Menu
+                <span id="iconem"></span>
+            </button>
+            <ul id="menu">
+                <li><a href="2tri.html"> 2 trimestre </a></li>
+                <li><a class="selected"> Circunferências </a></li>
+                <li><a href="2areas.html"> Áreas </a></li>
+                <li><a href="2poligonos.html"> Polígonos </a></li>
+                <li><a href="2solidosarquimedianos.html"> Sólidos de Arquimedes </a></li>
 
-        </ul>
-     </nav>
+            </ul>
+        </nav>
     </header>
 
 
+    <h2> Introdução : </h2>
+    
+    <br>
 
-    <h2> Introdução : </h2><br>
-        <p>Bom, Para início, precisamos entender um conceito básico Circunferências, é uma figura geométrica plana que consiste em todos os pontos que estão a uma mesma distância (chamada de raio) de um ponto central fixo (chamado de centro).
-            <br> além do diâmetro que é uma corda que passa pelo centro, corda que é um diâmetro que não passa pelo centro, e disco que é todos os pontos que são menores ou iguais o raio.
-        </p>
-        <img src="assets/img/circunferencia-1.png" alt="Circunferências" width="30%" height="30%" class="fundoexemplos">
+    <p>Bom, Para início, precisamos entender um conceito básico Circunferências, é uma figura geométrica plana que
+        consiste em todos os pontos que estão a uma mesma distância (chamada de raio) de um ponto central fixo (chamado
+        de centro).
+        <br> além do diâmetro que é uma corda que passa pelo centro, corda que é um diâmetro que não passa pelo centro,
+        e disco que é todos os pontos que são menores ou iguais o raio.
+    </p>
 
+    <img src="assets/img/circunferencia-1.png" alt="Circunferências" width="30%" height="30%" class="fundoexemplos">
 
+    <h2>Posições relativas a circunferencia :</h2>
+    <br>
+    <p class="bull">Reta Externa: A reta está fora da circunferência e não a toca.</p>
 
+    <p class="bull">Reta Tangente: A reta toca a circunferência em um único ponto, formando um ângulo de 90 graus com a
+        circunferência.</p>
 
-        <h2>Posições relativas a circunferencia :</h2>
-        <br>
-        <p class="bull">Reta Externa: A reta está fora da circunferência e não a toca.</p>
+    <p class="bull">Reta Secante: A reta intersecta a circunferência em dois pontos.</p>
 
-        <p class="bull">Reta Tangente: A reta toca a circunferência em um único ponto, formando um ângulo de 90 graus com a circunferência.</p>
-            
-        <p class="bull">Reta Secante: A reta intersecta a circunferência em dois pontos.</p>
+    <h2>Propriedades :</h2>
 
+    <p class="bull">Tangentes : <br><br>Uma reta tangente a uma circunferência em um ponto de tangência é perpendicular
+        ao raio que parte do centro da circunferência até esse ponto de tangência.</p>
 
-
-                <h2>Video explicativo :</h2>
-                <iframe width="400" height="150" class="center" src="https://www.youtube.com/embed/pg0JtqIon4c" title="Circunferência [COMPLETO] Aula e exercício resolvido" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <p></p><br>
-        <p></p>
-        <p> </p>
-        <p style="text-align:center">
-
+    <h2>Posições Relativas : </h2>
+    <img src="assets/img/pos.relativ.circ.jpg" alt="Posições Relativas Circunferências" height="30%"
+        class="fundoexemplos">
+    <p class="bull"> As posições relativas são utilizadas para calculas a distancia entre o centro de uma para a outra
+        circunferencia</p>
+    <br>
+    <h2>Formas geométricas CIrcunscritas e inscritas :</h2>
+    <div class="fundoexemplos"><img src="assets/img/cir.insc.circulos.jpg" alt="Posições Relativas Circunferências" height="30%">
     </div>
+     <br>
 
+    <h2>Video explicativo :</h2>
+
+    <iframe width="400px" height="300px" class="center" src="https://www.youtube.com/embed/pg0JtqIon4c"
+    title="Circunferência [COMPLETO] Aula e exercício resolvido" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen></iframe>
 
 
     <div class="direita">
 
-        <a href="2areas.html"> <button>Áreas</button></a></button> <br><br>
+        <a href="2areas.html"><button>Áreas</button></a></button> <br><br>
 
     </div>
 
     <div id="container_page">
         <footer id="rodape">
             <img src="assets/img/ifrs.jpg" height="100px" class="ifrs">
-            <p>&copy;Portfólio abner faé</p> 
+            <p>&copy;Portfólio abner faé</p>
             <p>Email de contato : barbosafaeabner@gmail.com </p>
             <p>telefone : 54 - 99996 5656 </p>
-          </footer>
-        </div>
-        <script src="assets/java/main.js"></script>
+        </footer>
+    </div>
+    <script src="assets/java/main.js"></script>
 </body>
+
 </html>
