--- a/triangulos.html
+++ b/triangulos.html
@@ -101,7 +101,7 @@
     
     <div class="direita">
         
-        <a href="index.html"> <button>Página inicial</button></a></button> <br><br>
+        <a href="2tri.html"> <button>2º trimestre</button></a></button> <br><br>
 
     </div>
 
