--- a/2areas.html
+++ b/2areas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,46 +10,81 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="preload" href="assets/java/main.js" as="script">
 </head>
+
 <body>
 
     <header id="header">
-        <h1 id="logo"> Ultimato abner 2023</h1>
-     <nav id="nav">
-        <button id="mobile">Menu
-            <span id="iconem"></span>
-        </button>
-        <ul id="menu">
-            <li><a href="2tri.html"> 2 trimestre  </a></li> 
-            <li><a href="2circunferencias.html"> Circunferências </a></li> 
-            <li><a class="selected"> Áreas </a></li> 
-            <li><a href="2poligonos.html"> Polígonos  </a></li> 
-            <li><a href="2solidosarquimedianos.html"> Sólidos de Arquimedes  </a></li> 
+        <h1 id="logo"> Ultimato - Áreas</h1>
+        <nav id="nav">
+            <button id="mobile">Menu
+                <span id="iconem"></span>
+            </button>
+            <ul id="menu">
+                <li><a href="2tri.html"> 2 trimestre </a></li>
+                <li><a href="2circunferencias.html"> Circunferências </a></li>
+                <li><a class="selected"> Áreas </a></li>
+                <li><a href="2poliedros.html"> Poliedros </a></li>
 
-        </ul>
-     </nav>
+            </ul>
+        </nav>
     </header>
 
-    <div class="center">
-        <br>
-        <br>
-        <hr>
-        <h1> EM CONSTRUÇÃO </h1>
-        <hr>
-        <br>
-        <br>
+    <h2> Introdução : </h2>
 
-        <a href="index.html"><button>Voltar</button> </a> <br><br>
-        
+    <p>Áreas de superfícies planas são uma parte importante da geometria e da matemática em geral.
+        Elas envolvem o cálculo da medida de superfícies bidimensionais.
+        <br>&nbsp;&nbsp; - Se a área de duas formas são iguais elas são equivalentes;
+        <br>&nbsp;&nbsp; - A soma de duas superfícies é associada a uma área;
+        <br>&nbsp;&nbsp; - Se há uma superfície contida dentro de outra a sua área é menor ou igual que a outra.
+    </p>
+
+    <div class="fundoexemplos">
+        <h2>Resumo das Fórmulas:</h2>
+        <p class="bull"> Coloquei um resumo com todas as Fórmulas para não ser necessário fazer várias
+            subclasses para cada forma geométrica, a imagem abaixo representa bem os calculos para calcular cada área
+            das
+            superfícies.
+        </p> <br>
+        <img src="assets/img/Formulas-das-areas-de-Figuras-Planas.jpg" alt="Fórmulas Áreas">
     </div>
 
+    <h2>Outras Fórmulas :</h2>
+    <p class="bull"> &nbsp; Área de um Polígono Regular: A área de um polígono regular (aquele com todos os lados e
+        ângulos iguais) pode ser calculada usando fórmulas específicas para diferentes formas, como pentágonos,
+        hexágonos, etc.</p>
+        <img src="assets/img/area_poligono_regular-1-694x480.jpg" height="300px" width="300px" alt="Polígono regular">
+    <p class="bull"> &nbsp; Área de um Setor Circular: A área de um setor circular é uma fração da área total de um
+        círculo e é calculada usando a fórmula Área = (Ângulo/360) x πr², onde o ângulo é medido em graus.</p>
+        <img src="assets/img/setor_circular.jpg" height="500px" width="300px" alt="setor c">
+
+    <h2>Auto Avaliação do Conteúdo :</h2>
+
+    <p>Bom, sei que este conteúdo não ficou muito completo, mas deixei oque achei mais facil de fazer e 
+        calcular, é um conteúdo extremamente fácil, e abaixo um video explicativo, e no canto inferior direito
+        o próximo e penúltimo conteúdo.
+    </p>
+
+    <h2>Video explicativo :</h2>
+
+    <iframe src="https://www.youtube.com/embed/udOTEHMoUNA" width="30%" title="Áreas de figuras planas - Brasil Escola"
+        frameborder="1"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
+
+    <div class="direita">
+
+        <a href="2poliedros.html"> <button>Poliedros</button></a></button> <br><br>
+
+    </div>
     <div id="container_page">
         <footer id="rodape">
             <img src="assets/img/ifrs.jpg" height="100px" class="ifrs">
-            <p>&copy;Portfólio abner faé</p> 
+            <p>&copy;Portfólio abner faé</p>
             <p>Email de contato : barbosafaeabner@gmail.com </p>
             <p>telefone : 54 - 99996 5656 </p>
-          </footer>
-        </div>
-        <script src="assets/java/main.js"></script>
+        </footer>
+    </div>
+    <script src="assets/java/main.js"></script>
 </body>
+
 </html>
