--- a/2circunferencias.html
+++ b/2circunferencias.html
@@ -14,7 +14,7 @@
 <body>
 
     <header id="header">
-        <h1 id="logo"> Ultimato abner 2023</h1>
+        <h1 id="logo"> Ultimato-Circunferências</h1>
         <nav id="nav">
             <button id="mobile">Menu
                 <span id="iconem"></span>
@@ -23,8 +23,7 @@
                 <li><a href="2tri.html"> 2 trimestre </a></li>
                 <li><a class="selected"> Circunferências </a></li>
                 <li><a href="2areas.html"> Áreas </a></li>
-                <li><a href="2poligonos.html"> Polígonos </a></li>
-                <li><a href="2solidosarquimedianos.html"> Sólidos de Arquimedes </a></li>
+                <li><a href="2poliedros.html"> Poliedros </a></li>
 
             </ul>
         </nav>
@@ -32,8 +31,6 @@
 
 
     <h2> Introdução : </h2>
-    
-    <br>
 
     <p>Bom, Para início, precisamos entender um conceito básico Circunferências, é uma figura geométrica plana que
         consiste em todos os pontos que estão a uma mesma distância (chamada de raio) de um ponto central fixo (chamado
@@ -41,10 +38,10 @@
         <br> além do diâmetro que é uma corda que passa pelo centro, corda que é um diâmetro que não passa pelo centro,
         e disco que é todos os pontos que são menores ou iguais o raio.
     </p>
-
-    <img src="assets/img/circunferencia-1.png" alt="Circunferências" width="30%" height="30%" class="fundoexemplos">
-
-    <h2>Posições relativas a circunferencia :</h2>
+<div class="fundoexemplos"><img src="assets/img/circunferencia-1.png" alt="Circunferências">
+</div>
+    
+    <h2>Posições relativas a circunferência :</h2>
     <br>
     <p class="bull">Reta Externa: A reta está fora da circunferência e não a toca.</p>
 
@@ -62,19 +59,54 @@
     <img src="assets/img/pos.relativ.circ.jpg" alt="Posições Relativas Circunferências" height="30%"
         class="fundoexemplos">
     <p class="bull"> As posições relativas são utilizadas para calculas a distancia entre o centro de uma para a outra
-        circunferencia</p>
+        circunferência</p>
     <br>
-    <h2>Formas geométricas CIrcunscritas e inscritas :</h2>
-    <div class="fundoexemplos"><img src="assets/img/cir.insc.circulos.jpg" alt="Posições Relativas Circunferências" height="30%">
+    <h2>Formas geométricas Circunscritas e inscritas :</h2>
+    <div class="fundoexemplos"><img src="assets/img/cir.insc.circulos.jpg" alt="Posições Relativas Circunferências"
+            height="90%">
+            <p>Para serem inscritos ou circuncritos as bordas da forma devem se tocar</p>
     </div>
-     <br>
+    <br>
+
+    <h2>Propriedades formas geométrica inscritas e circunscritas :</h2>
+    <p class="bull"> Quadrilátero circunscrito (circunferência dentro): <br>
+        &nbsp;&nbsp; - A soma de dois lados opostos são iguais a soma dos outros dois.
+    </p>
+    <p class="bull"> Quadrilátero inscrito (circunferência fora): <br>
+        &nbsp;&nbsp; - A soma de dois ângulos opostos são iguais a 180°.
+    </p>
+    <p class="bull"> Quadrado: <br>
+        &nbsp;&nbsp; - Quadrados são inscritos e circunscritos em circunferências. <br>
+        &nbsp;&nbsp; - Do meio do Quadrado até a ponta do mesmo é o raio do circulo incrito. <br>
+        &nbsp;&nbsp; - Do meio do quadrado até o meio de um dos lados é o raio do circulo circunscrito que é a Apótema do quadrado.<br>
+        &nbsp;&nbsp; - O lado do quadrado é o dobro da apótema. <br>
+    </p>
+    <p class="bull"> Hexágono: <br>
+        &nbsp;&nbsp; - É formado por 6 Triângulos Equiláteros <br>
+        &nbsp;&nbsp; - O lado do hexágono é do mesmo tamanho do raio da circunferencia inscrita <br>
+        &nbsp;&nbsp; - A apótema é igual ao Raio da circunferencia vezes a raíz de três dividica por dois : a = r. &#8730 3 / 2<br>
+    </p>
+    <p class="bull"> Triângulo Equilátero: <br>
+        &nbsp;&nbsp; - O raio da circunferência é bissetriz dos ângulos agudos do triângulo equilátero. formando um triângulo retângulo <br>
+        &nbsp;&nbsp; - Relação lado e raio : l = R. &#8730 3 <br>
+        &nbsp;&nbsp; - Relação Raio e Apótema do triângulo : R = 2a<br>
+        &nbsp;&nbsp; - Relação lado e Apótema : a = R. &#8730 3 / 6<br>
+    </p>
+    <br>
+
+    <h2>Auto Avaliação do Conteúdo :</h2>
+
+    <p> Bom, Algumas coisas que tiveram no Conteúdo Eu não coloquei aqui, Pois são coisas que eu acho mais dificeis, exemplo são os 
+    ângulos inscritos e circuncritos, o conteúdo em sí é facil, mas as contas são um pouco complicadas, como para descobrir a 
+    relação entre apótema e lado, ou lado e raio, Acho que deste conteúdo é isso,  e abaixo um video explicativo do conteúdo e no lado inferior
+    direito o conteúdo de Áreas.</p>
 
     <h2>Video explicativo :</h2>
 
-    <iframe width="400px" height="300px" class="center" src="https://www.youtube.com/embed/pg0JtqIon4c"
-    title="Circunferência [COMPLETO] Aula e exercício resolvido" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    allowfullscreen></iframe>
+    <iframe class="center" src="https://www.youtube.com/embed/pg0JtqIon4c" width="30%"
+        title="Circunferência [COMPLETO] Aula e exercício resolvido" frameborder="1"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
 
 
     <div class="direita">
