--- a/2tri.html
+++ b/2tri.html
@@ -34,8 +34,7 @@
             <br>
             <a href="2circunferencias.html"> <button>Circunferências </button></a> <br><br>
             <a href="2areas.html"> <button>Áreas </button></a></button> <br><br>
-            <a href="2poligonos.html"> <button>Polígonos </button></a></button> <br><br>
-            <a href="2solidosarquimedianos.html"> <button>Sólidos de Arquimedes </button></a></button> <br><br>
+            <a href="2poliedros.html"> <button>Poliedros </button></a></button> <br><br>
             <br>
             <p>
 
