--- a/2tri.html
+++ b/2tri.html
@@ -31,14 +31,16 @@
         <br>
         <br>
         <div class="center">
+            <h1> Conteúdos Abordados :</h1>
             <br>
             <a href="2circunferencias.html"> <button>Circunferências </button></a> <br><br>
             <a href="2areas.html"> <button>Áreas </button></a></button> <br><br>
             <a href="2poliedros.html"> <button>Poliedros </button></a></button> <br><br>
             <br>
             <p>
-
-
+                Bom, iniciando essa auto avaliação, me senti uma pessoa muito inutil durante o segundo trimestre letivo, 
+                pois não dei meu máximo, tentei fazer o meu melhor no portfólio, não consegui colocar exercícios resolvidos
+                ao segundo trimestre por alguns motivos, mas tentei fazer meu melhor, espero que goste do portfólio e fique a vontade!
 
             </p>
         </div>
