--- a/2circunferencias.html
+++ b/2circunferencias.html
@@ -88,10 +88,32 @@
     </p>
     <p class="bull"> Triângulo Equilátero: <br>
         &nbsp;&nbsp; - O raio da circunferência é bissetriz dos ângulos agudos do triângulo equilátero. formando um triângulo retângulo <br>
-        &nbsp;&nbsp; - Relação lado e raio : l = R. &#8730 3 <br>
-        &nbsp;&nbsp; - Relação Raio e Apótema do triângulo : R = 2a<br>
-        &nbsp;&nbsp; - Relação lado e Apótema : a = R. &#8730 3 / 6<br>
     </p>
+    
+
+    <div class="fundoexemplos">
+        <p> Relação Raio e Apótema do triângulo : R = 2a </p>
+        <p>  Relação lado e raio : l = R. &#8730 3 </p>
+        <p> Relação lado e Apótema : a = l. &#8730 3 / 6 </p>
+        <div class="fundo">
+            <label for="apotema">Apótema
+             <input type="text" name="apotema2" id="apotema2"><br>
+             </label>
+             <label for="Lado">Lado
+                <input type="text" name="Lado" id="Lado"><br>
+                </label>
+             <label for="Raio">Raio
+             <input type="text" name="Raio" id="Raio">
+             </label>
+             <br>
+             <input type="button" value="Calcular" id="calc_apot_raio">
+             <br>
+             <input type="button" value="Resetar" id="zerarapt">
+    
+         </label>
+         </div>
+    </div>
+
     <br>
 
     <h2>Auto Avaliação do Conteúdo :</h2>
