--- a/3tri.html
+++ b/3tri.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página principal portfólio</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main3tri.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="preload" href="assets/java/main.js" as="script">
 </head>
@@ -19,27 +19,34 @@
         </button>
         <ul id="menu">
             
-            <li><a href="index.html">| página inicial | </a></li> 
-            <li><a href="1tri.html">| 1 trimestre | </a></li> 
-            <li><a href="2tri.html">| 2 trimestre |</a></li> 
-            <li><a class="selected">| 3 trimestre | </a></li> 
+            <li><a href="index.html"> página inicial  </a></li> 
+            <li><a href="1tri.html"> 1 trimestre  </a></li> 
+            <li><a href="2tri.html"> 2 trimestre </a></li> 
+            <li><a class="selected"> 3 trimestre  </a></li> 
             
 
         </ul>
      </nav>
     </header>
 
+
+    <h1>Conteúdos abordados : </h1>
     <div class="center">
         <br>
+        <a href="3Prismas.html"> <button>Prismas </button></a> <br><br>
+        <a href="3Piramides.html"> <button>Pirâmedes </button></a> <br><br>
+        <a href="3Cilindros.html"> <button>Cilindros </button></a> <br><br>
+        <a href="3Cones.html"> <button>Cones </button></a></button> <br><br>
+        <a href="3Esferas.html"> <button>Esferas </button></a></button> <br><br>
+        <a href="3GeoAnalitica.html"> <button>Geometria Analítica </button></a></button> <br><br>
         <br>
-        <hr>
-        <h1> EM CONSTRUÇÃO </h1>
-        <hr>
-        <br>
-        <br>
+        <p>
 
-        <a href="index.html"><button>Voltar</button> </a> <br><br>
-
+            Bom, iniciando essa auto avaliação, comecei o trimestre me sentindo um pouco mal por me achar desprovido de inteligência,
+            pois não consegui nem por opção dar meu máximo, e não só em matemática, mas ainda assim tentei fazer o meu melhor, espero que goste do portfólio e fique a vontade!
+        </p>
+    </div>
+    <div class="center"> <a href="index.html"><button>Voltar</button> </a></div>
     </div>
 
     <div id="container_page">
