--- a/3Esferas.html
+++ b/3Esferas.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/main3tri.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="preload" href="assets/java/main.js" as="script">
+    <link rel="shortcut icon" type="imagex/png" href="assets/css/matematica.png">
+
 </head>
 
 <body>
