--- a/3Prismas.html
+++ b/3Prismas.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página principal portfólio</title>
+    <title>Ultimato-Prismas</title>
     <link rel="stylesheet" type="text/css" href="assets/css/main3tri.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="preload" href="assets/java/main.js" as="script">
+    <link rel="shortcut icon" type="imagex/png" href="assets/css/matematica.png">
+
 </head>
 
 <body>
 
     <header id="header">
-        <h1 id="logo"> Ultimato-Circunferências</h1>
+        <h1 id="logo"> Prismas</h1>
         <nav id="nav">
             <button id="mobile">Menu
                 <span id="iconem"></span>
