--- a/3tri.html
+++ b/3tri.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página principal portfólio</title>
+    <title>3° Trimestre Ultimato</title>
     <link rel="stylesheet" type="text/css" href="assets/css/main3tri.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="preload" href="assets/java/main.js" as="script">
+    <link rel="shortcut icon" type="imagex/png" href="assets/css/matematica.png">
+
 </head>
 <body>
 
     <header id="header">
-        <h1 id="logo"> Ultimato abner 2023</h1>
+        <h1 id="logo"> 3° Trimestre 2023 </h1>
      <nav id="nav">
         <button id="mobile">Menu
             <span id="iconem"></span>
